--- a/Components/Pages/Ventas/ListadoPedidos.razor
+++ b/Components/Pages/Ventas/ListadoPedidos.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Ventas/Listados"
+@using CCC_Rugby_Web.Utilities
 @layout MainLayout
 @attribute [Authorize]
 @inject HttpClient httpClient
